# pax_gol

./: .gitignore  Cargo.toml
src/: board.rs  gol.rs  lib.rs
